--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           </div>
           <div class="col-md-12 form-group">
             <button class="btn pull-center" type="submit" style="width:100%">
-              <a style="color:grey;font-size:20px;" href="AdminLoginpage.html">Log In as Admin</a>
+              <a style="color:grey;font-size:20px;" href="Adminloginpage.html">Log In as Admin</a>
             </button>
           </div>
         </div><br><br>
