--- a/AdminOptionPage.html
+++ b/AdminOptionPage.html
@@ -9,155 +9,152 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <style>
-      element.style{
-        width:100%;
+  <style>
+    body {
+      font: 400 15px/1.8 Lato, sans-serif;
+      color: #777;
+      width: 100%;
+    }
+    h3, h4 {
+      margin: 10px 0 30px 0;
+      letter-spacing: 10px;      
+      font-size: 20px;
+      color: #111;
+    }
+    .container {
+      padding: 80px 120px;
+    }
+    .person {
+      border: 10px solid transparent;
+      margin-bottom: 25px;
+      width: 80%;
+      height: 80%;
+      opacity: 0.7;
+    }
+    .person:hover {
+      border-color: #f1f1f1;
+    }
+    .carousel-inner img {
+      width: 100%;
+      margin: auto;
+    }
+    .carousel-caption h3 {
+      color: #fff !important;
+    }
+    @media (max-width: 600px) {
+      .carousel-caption {
+        display: none;
       }
-      body {
-        font: 400 15px/1.8 Lato, sans-serif;
-        color: #777;
-        width: 100%;
-      }
-      h3, h4 {
-        margin: 10px 0 30px 0;
-        letter-spacing: 10px;      
-        font-size: 20px;
-        color: #111;
-      }
-      .container {
-        padding: 80px 120px;
-      }
-      .person {
-        border: 10px solid transparent;
-        margin-bottom: 25px;
-        width: 80%;
-        height: 80%;
-        opacity: 0.7;
-      }
-      .person:hover {
-        border-color: #f1f1f1;
-      }
-      .carousel-inner img {
-        width: 100%;
-        margin: auto;
-      }
-      .carousel-caption h3 {
-        color: #fff !important;
-      }
-      @media (max-width: 600px) {
-        .carousel-caption {
-          display: none;
-        }
-      }
-      .bg-1 {
-        background: #2d2d30;
-        color: #bdbdbd;
-      }
-      .bg-1 h3 {
-        color: #fff;
-      }
-      .bg-1 p {
-        font-style: italic;
-      }
-      .list-group-item:first-child {
-        border-top-right-radius: 0;
-        border-top-left-radius: 0;
-      }
-      .list-group-item:last-child {
-        border-bottom-right-radius: 0;
-        border-bottom-left-radius: 0;
-      }
-      .thumbnail {
-        padding: 0 0 15px 0;
-        border: none;
-        border-radius: 0;
-      }
-      .thumbnail p {
-        margin-top: 15px;
-        color: #555;
-      }
-      .btn {
-        padding: 10px 20px;
-        background-color: #333;
-        color: #f1f1f1;
-        border-radius: 0;
-        transition: .2s;
-        width:80%;
-      }
-      .btn:hover, .btn:focus {
-        border: 1px solid #333;
-        background-color: #fff;
-        color: #000;
-      }
-      .modal-header, h4, .close {
-        background-color: #333;
-        color: #fff !important;
-        text-align: center;
-        font-size: 30px;
-      }
-      .modal-header, .modal-body {
-        padding: 40px 50px;
-      }
-      .nav-tabs li a {
-        color: #777;
-      }
-      #googleMap {
-        width: 100%;
-        height: 400px;
-        -webkit-filter: grayscale(100%);
-        filter: grayscale(100%);
-      }  
-      .navbar {
-        font-family: Montserrat, sans-serif;
-        margin-bottom: 0;
-        background-color: #2d2d30;
-        border: 0;
-        font-size: 11px !important;
-        letter-spacing: 4px;
-        opacity: 0.9;
-      }
-      .navbar li a, .navbar .navbar-brand { 
-        color: #d5d5d5 !important;
-      }
-      .navbar-nav li a:hover {
-        color: #fff !important;
-      }
-      .navbar-nav li.active a {
-        color: #fff !important;
-        background-color: #29292c !important;
-      }
-      .navbar-default .navbar-toggle {
-        border-color: transparent;
-      }
-      .open .dropdown-toggle {
-        color: #fff;
-        background-color: #555 !important;
-      }
-      .dropdown-menu li a {
-        color: #000 !important;
-      }
-      .dropdown-menu li a:hover {
-        background-color: red !important;
-      }
-      footer {
-        background-color: #2d2d30;
-        color: #f5f5f5;
-        padding: 32px;
-      }
-      footer a {
-        color: #f5f5f5;
-      }
-      footer a:hover {
-        color: #777;
-        text-decoration: none;
-      }  
-      .form-control {
-        border-radius: 0;
-      }
-      textarea {
-        resize: none;
-      }
-      .carousel-indicators {
+    }
+    .bg-1 {
+      background: #2d2d30;
+      color: #bdbdbd;
+    }
+    .bg-1 h3 {
+      color: #fff;
+    }
+    .bg-1 p {
+      font-style: italic;
+    }
+    .list-group-item:first-child {
+      border-top-right-radius: 0;
+      border-top-left-radius: 0;
+    }
+    .list-group-item:last-child {
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+    .thumbnail {
+      padding: 0 0 15px 0;
+      border: none;
+      border-radius: 0;
+    }
+    .thumbnail p {
+      margin-top: 15px;
+      color: #555;
+    }
+    .btn {
+      padding: 10px 20px;
+      background-color: #333;
+      color: #f1f1f1;
+      border-radius: 0;
+      transition: .2s;
+      width:80%;
+    }
+    .btn:hover, .btn:focus {
+      border: 1px solid #333;
+      background-color: #fff;
+      color: #000;
+    }
+    .modal-header, h4, .close {
+      background-color: #333;
+      color: #fff !important;
+      text-align: center;
+      font-size: 30px;
+    }
+    .modal-header, .modal-body {
+      padding: 40px 50px;
+    }
+    .nav-tabs li a {
+      color: #777;
+    }
+    #googleMap {
+      width: 100%;
+      height: 400px;
+      -webkit-filter: grayscale(100%);
+      filter: grayscale(100%);
+    }  
+    .navbar {
+      font-family: Montserrat, sans-serif;
+      margin-bottom: 0;
+      background-color: #2d2d30;
+      border: 0;
+      font-size: 11px !important;
+      letter-spacing: 4px;
+      opacity: 0.9;
+    }
+    .navbar li a, .navbar .navbar-brand { 
+      color: #d5d5d5 !important;
+    }
+    .navbar-nav li a:hover {
+      color: #fff !important;
+    }
+    .navbar-nav li.active a {
+      color: #fff !important;
+      background-color: #29292c !important;
+    }
+    .navbar-default .navbar-toggle {
+      border-color: transparent;
+    }
+    .open .dropdown-toggle {
+      color: #fff;
+      background-color: #555 !important;
+    }
+    .dropdown-menu li a {
+      color: #000 !important;
+    }
+    .dropdown-menu li a:hover {
+      background-color: red !important;
+    }
+    footer {
+      background-color: #2d2d30;
+      color: #f5f5f5;
+      padding: 32px;
+    }
+    footer a {
+      color: #f5f5f5;
+    }
+    footer a:hover {
+      color: #777;
+      text-decoration: none;
+    }  
+    .form-control {
+      border-radius: 0;
+    }
+    textarea {
+      resize: none;
+    }
+    .carousel-indicators {
       position: absolute;
       bottom: 10px;
       left: 50%;
@@ -167,8 +164,8 @@
       margin-left: -30%;
       text-align: center;
       list-style: none;
-  }
-    </style>
+    }
+  </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
 
@@ -189,7 +186,7 @@
         <li><a href="#myPage">HOME</a></li>
         <li><a href="#aboutUs">ABOUT US</a></li>
         <li><a href="#action">ACTION</a></li>
-        <li><a href="index.html">LOG OUT</a></li>
+        <li><a href="#" onclick="logout()">LOG OUT</a></li>
       </ul>
     </div>
   </div>
@@ -277,21 +274,28 @@
   </div>
   <br><br>
 </div>
+
 <script>
-function showDemoAlert() {
-    alert("This function doesn't work as this is only a DEMO");
-    return false; 
-}
-</script>
-<script>
+  // Check authentication on page load
   document.addEventListener('DOMContentLoaded', function() {
     const username = sessionStorage.getItem('loggedInUsername');
-    if (username === 'admin') {
-      document.getElementById('welcomeMessage').innerHTML = 'Welcome Admin<br><strong>' + username + '</strong>';
+    if (username !== 'admin') {
+      window.location.href = 'AdminLoginPage.html';
     } else {
-      window.location.href = 'Adminloginpage.html';
+      document.getElementById('welcomeMessage').innerHTML = 
+        '<h2>Welcome Admin</h2><p>You are logged in as <strong>' + username + '</strong></p>';
     }
   });
+
+  function logout() {
+    sessionStorage.removeItem('loggedInUsername');
+    window.location.href = 'AdminLoginPage.html';
+  }
+
+  function showDemoAlert() {
+    alert("This function doesn't work as this is only a DEMO");
+    return false; 
+  }
 
   $(document).ready(function(){
     $('[data-toggle="tooltip"]').tooltip(); 
